# llm-robots-discrimination-safety

./: .gitignore  PromptSet.py  README.md  create_prompt_set.py  data_loader.py  discarded.ipynb  emotions_specific.py  evaluate_gpt.py  falcon-dataset.py  falcon-scores.py  falcon-scores.py.save  falcon-single.py  falcon2.py  falcon_dataset.py  helpers.py  inputs.py  load_vocab.py  main.py  output copy.txt  output.txt  prompt_set.py  prompts.py  rank_centrality.py  run-falcon.py  run-llama.py  run.sh  run_prompts.py  test.ipynb  test.py  visualise_outputs.py  vocab.py  write_prompts.py
discrimination-assessment/: .gitignore  README.md  create_prompt_set.py  main.py  prepare_figures_for_tex.py  prompt_set.py  pyproject.toml  requirements.txt  visualise_outputs.py
discrimination-assessment/outputs/llama31_8b/: emotion_scores_categorisation01.csv  proxemics_scores_categorisation01.csv  proxemics_scores_comparison01.csv  recommendation_scores_generation01.csv
discrimination-assessment/outputs/mistral7b/: emotion_scores_comparison01.csv  proxemics_scores_categorisation01.csv  recommendation_scores_categorisation01.csv  recommendation_scores_comparison01.csv  recommendation_scores_generation01.csv
discrimination-assessment/outputs/text-davinci-003/: proxemics_scores_categorisation01.csv  recommendation_scores_categorisation01.csv  task_scores_comparison01.csv
discrimination-assessment/src/: README.md  baselines.py  simulation.py
docs/: conf.py  create_prompt_set.rst  index.html  index.rst  modules.rst  run_prompts.rst  write_prompts.rst
old/: PromptSet.py  inputs.py  (+2 more)
(+281 files in other folders)
